# acro-rs

./: Cargo.toml  README.md  settings.toml
src/: lib.rs  main.rs
tests/: cli.rs
tests/inputs/: def.csv  diff.csv  semicolon.csv  with_header.csv  wrong_columns.csv
