[package]
name = "acro"
version = "0.3.0"
edition = "2021"
authors = ["Nil Ventosa <ventosa@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to query csv files of acronyms"
readme = "README.md"
homepage = "https://github.com/nilventosa/acro-rs"
repository = "https://github.com/nilventosa/acro-rs"
keywords = ["cli", "search", "csv", "acronym", "query"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.0.26"
colored = "2.0.0"
csv = "1.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
